--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "test": "nyc ts-mocha --recursive -p ./tsconfig.json '**/*.spec.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +16,19 @@
   },
   "devDependencies": {
     "@babel/types": "^7.10.2",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/babel__generator": "^7.6.1",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
+    "@types/sinon": "^9.0.4",
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
+    "sinon": "^9.0.2",
     "ts-loader": "^7.0.5",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
