Completed unit tests, fixed lint errors, adding reporters for tslint and jscpd

--- a/.nycrc
+++ b/.nycrc
@@ -5,12 +5,12 @@
     "src/**/*.ts"
   ],
   "reporter": ["html"],
-  "checkCoverage": false,
+  "checkCoverage": true,
   "branches": 100,
   "lines": 100,
   "functions": 100,
   "statements": 100,
-  "perFile": false,
+  "perFile": true,
   "reportDir": "./reports/coverage",
   "tempDir": "./reports/.nyc_output"
 }
