--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "test": "nyc ts-mocha --recursive -p ./tsconfig.json '**/*.spec.ts'"
+    "lint": "node scripts/tslint-html-reporter.js",
+    "tslint": "tslint --project ./tsconfig.json",
+    "jscpd": "node scripts/jscpd-html-reporter.js",
+    "mocha": "TS_NODE_PROJECT='tsconfig.json' mocha --config '.mocharc' '**/*.ts'",
+    "test": "nyc npm run mocha"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +27,7 @@
     "@types/node": "^14.0.13",
     "@types/sinon": "^9.0.4",
     "chai": "^4.2.0",
+    "jscpd-html-reporter": "^2.0.1",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "sinon": "^9.0.2",
@@ -33,6 +38,7 @@
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-html-report": "^2.0.3",
+    "tslint-html-reporter": "^1.0.0",
     "tslint-immutable": "^6.0.1",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.9.5",
