--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "tslint": "tslint --project ./tsconfig.json",
     "jscpd": "node scripts/jscpd-html-reporter.js",
     "mocha": "TS_NODE_PROJECT='tsconfig.json' mocha --config '.mocharc' '**/*.ts'",
-    "test": "nyc npm run mocha"
+    "test": "nyc npm run mocha",
+    "e2e": "node e2e/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@types/node": "^14.0.13",
     "@types/sinon": "^9.0.4",
     "chai": "^4.2.0",
+    "copy-dir": "^1.3.0",
     "jscpd-html-reporter": "^2.0.1",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
